<resources>

    <string name="app_name">StoreFinderProject</string>
    <string name="mainpage_main_welcome_message1">Welcome...</string>
    <string name="mainpage_main_search_message1">Let\'s find what you want!</string>
    <string name="mainpage_main_search_hinttext">Type your query here</string>
    <string name="mainpage_main_search_message2">or let\'s see what is hot!</string>
    <string name="mainpage_main_hottag_temp">#HotTag</string>
    <string name="mainpage_main_storepage_button">Store</string>
    <string name="mainpage_main_info_button">Info</string>
    
    <string name="storepage_mainpage_button">Home</string>
    <string name="storepage_setting_button">Setting</string>
    <string name="storepage_info_button">Info</string>
    <string name="storepage_addnewitem">Add New Product</string>
    
    <string name="resultpage_queryinstruction">Let\'s find what you want!</string>
    <string name="resultpage_queryplaceholder">Type your query here</string>
    <string name="resultdetailpage_productname">Product:</string>
    <string name="resultdetailpage_productprice">Price:</string>
    <string name="resultdetailpage_shipping">Shipping:</string>
    <string name="resultdetailpage_description">Description:</string>
    <string name="resultdetailpage_button_favorite">Favorite</string>
    <string name="resultdetailpage_button_report">Report</string>
    <string name="resultdetailpage_button_buy">Order</string>
    
    <string name="storedetailpage_message1">Let us know more...</string>
    <string name="storedetailpage_message2">About your store</string>
    <string name="storedetailpage_storename">Store name: </string>
    <string name="storedetailpage_storedetail">Store detail: </string>
    <string name="storedetailpage_storecontract">Store address: </string>
    <string name="storedetailpage_storetel">Store tel: </string>
    <string name="storedetailpage_storemail">Store e-mail: </string>
    <string name="storedetailpage_finishbutton">Finish</string>
    
    <string name="productdetailpage_productname">Name:</string>
    <string name="productdetailpage_producttype">Type:</string>
    <string name="productdetailpage_productprice">Price:</string>
    <string name="productdetailpage_productdiscount">Discount Price:</string>
    <string name="productdetailpage_productdescription">Description:</string>
    <string name="productdetailpage_productshipping">Shipping:</string>
    <string name="productdetailpage_productavailable">Available:</string>
    <string name="productdetailpage_submit_additem">Add</string>
    <string name="productdetailpage_submit_finish">Finish</string>
    <string name="productdetailpage_submit_ok">OK</string>
    <string name="productdetailpage_delete">Delete</string>
    <string name="productdetailpage_info">Info</string>
    
    <string name="imagecropperpage_submit_button">OK</string>
    <string name="imagecropperpage_instruction">Touch Here to Select Image.</string>
    <string name="imagecropperpage_instruction2">Crop Photo then Touch OK.</string>
    
    <string name="banpage_message1">Sorry, service is temporary unavailable.</string>
    <string name="banpage_message2">Please contract us for more details.</string>
    <string name="banpage_case_db_failure">Connection problem</string>
    <string name="banpage_case_account_or_device">Account does not match IMEI</string>
    <string name="banpage_case_break_term">Break a term of service</string>

</resources>