<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainpage_mainlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Red_Main"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/rounded_corner_bg"
        android:orientation="horizontal"
        android:padding="5dp" >

        <ImageView
            android:id="@+id/mainpage_user_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:orientation="vertical"
            android:padding="3dp" >

            <TextView
                android:id="@+id/mainpage_welcomeuser"
                style="@style/mediumBlackText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mainpage_main_welcome_message1" />

            <TextView
                android:id="@+id/mainpage_username"
                style="@style/largeBlackText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="username" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/rounded_corner_bg"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/mainpage_search_message1"
            style="@style/largeBlackText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mainpage_main_search_message1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Red_Main50"
            android:orientation="horizontal" >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp" >

                <EditText
                    android:id="@+id/mainpage_search_query_highlight"
                    style="@style/mediumBlackText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/mainpage_search_query"
                    android:background="@null"
                    android:maxLines="1"
                    android:textColor="@color/Transparent" />

                <EditText
                    android:id="@+id/mainpage_search_query"
                    style="@style/mediumBlackText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/mainpage_main_search_hinttext"
                    android:maxLines="1"
                    android:textColorHint="@color/White" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/mainpage_search_submit_query_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="5dp"
                android:src="@drawable/search" />
        </LinearLayout>

        <TextView
            android:id="@+id/mainpage_search_message2"
            style="@style/largeBlackText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mainpage_main_search_message2" />
    </LinearLayout>

</LinearLayout>