<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Blue_Main" >

    <ProgressBar
        android:id="@+id/storepage_progressbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Blue_Main"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/storepage_listview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:scrollbars="none" >
        </ListView>

        <Button
            android:id="@+id/storepage_additem"
            style="@style/mediumBlackText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_corner_bg50"
            android:drawableTop="@drawable/plus_50"
            android:paddingTop="5dp"
            android:text="@string/storepage_addnewitem" />

        <View style="@style/divider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp" >

            <Button
                android:id="@+id/storepage_mainpage_button"
                style="@style/smallBlackTextBold"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/circle_button_bg_white50"
                android:drawableTop="@drawable/home_50"
                android:padding="5dp"
                android:text="@string/storepage_mainpage_button" />

            <Button
                android:id="@+id/storepage_setting_button"
                style="@style/smallBlackTextBold"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_toRightOf="@+id/storepage_mainpage_button"
                android:background="@drawable/circle_button_bg_white50"
                android:drawableTop="@drawable/settings_50"
                android:padding="5dp"
                android:text="@string/storepage_setting_button" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>